[fix/fix-bug] add default align to heading to fix text clip bug

--- a/src/editor/blocks/heading/styles/editor.scss
+++ b/src/editor/blocks/heading/styles/editor.scss
@@ -1,3 +1,6 @@
 .components-toolbar-group{
     flex-shrink: initial;
 }
+.wp-block-gutenverse-heading{
+    text-align: left;
+}
